# nodus

./: .env.example  .eslintrc.cjs  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  package-lock.json  package.json  sitemap.xml  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md
.github/workflows/: ci.yml  docs.yml  release.yml
PRODUCT_DESIGN/: index.html
development/: index.html
docs/: PRODUCT_DESIGN.md  REVIEW.md  _config.yml  development.md  downloads.md  features.md  getting-started.md  index.md  zensical.toml
docs/assets/: lightbox.js  nightsky.css
docs/content/: AGENT_ARCHITECTURE.md  PRODUCT_DESIGN.md  REVIEW.md  development.md  downloads.md  features.md  getting-started.md  index.md  typst-math-reference.md
docs/design/: frame-folder-sync.md
docs/public/: index.html  search.json
features/: index.html
getting-started/: index.html
scripts/: bump-version.sh  ci-check.sh  pre-commit  release.sh  setup-hooks.sh
search/: search_index.json
site/: 404.html  search.json
site/content/: index.html
site/public/: 404.html  index.html  sitemap.xml
site/stylesheets/: nightsky.css
snap/: snapcraft.yaml
snap/gui/: nodus.desktop
src/: App.css  App.vue  main.ts
src-tauri/: Cargo.toml  nodus.desktop  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_storylines.sql  003_storyline_color.sql  004_edge_color.sql  005_edge_storyline.sql  006_themes.sql  007_frames.sql  008_edge_multi_type.sql  009_workspace_sync.sql  010_edge_directed.sql  010_frame_folder_path.sql  011_frame_parent.sql
src-tauri/src/: checksum.rs  commands.rs  database.rs  import_helpers.rs  layout_config.rs  main.rs  mcp_websocket.rs  pdf.rs  themes.rs  typst_render.rs  watcher.rs  zotero.rs
src-tauri/src/commands/: edges.rs  file_locks.rs  frames.rs  http.rs  mod.rs  nodes.rs  ontology.rs  pdf.rs  storylines.rs  themes.rs  vault_watcher.rs  web_search.rs  workspaces.rs
src-tauri/src/database/: edges.rs  mod.rs  models.rs  nodes.rs
src-tauri/src/ontology/: mod.rs  parser.rs  transformer.rs  types.rs
src-tauri/tests/fixtures/: sample.ttl
src-tauri/themes/: cyber.yaml  dark.yaml  light.yaml  pitch-black.yaml
src/__tests__/: agent-log.test.ts  agent-tool-dispatch.test.ts  anthropic-provider.test.ts  bibtex.test.ts  (+28 more)
typst-math-reference/: index.html
(+384 files in other folders)
