[package]
name = "nodus"
version = "0.4.11"
description = "Local-first knowledge graph"
authors = ["Nodus Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-clipboard-manager = "2.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# File watching
notify = "6.0"
fs2 = "0.4"

# PDF extraction
pdf-extract = "0.7"
lopdf = "0.33"

# RDF/Ontology parsing
rio_api = "0.8"
rio_turtle = "0.8"
rio_xml = "0.8"
oxiri = "0.2"

# Utilities
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
walkdir = "2.4"
hex = "0.4"
regex = "1.10"
urlencoding = "2.1"
html-escape = "0.2"

# Typst for math rendering
typst = "0.12"
typst-svg = "0.12"
typst-assets = { version = "0.12", features = ["fonts"] }
comemo = "0.4"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
